Clojurists Together deadline milestone. A reference only. Broken state mid-journey into JavaCPP transition.